--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
 asgiref==3.2.5
+certifi==2019.11.28
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.4
 django-filter==2.2.0
+django-user-agents==0.4.0
+get==2019.4.13
 gunicorn==20.0.4
+idna==2.9
 numpy==1.18.2
 pandas==1.0.3
+post==2019.4.13
 psycopg2-binary==2.8.4
+public==2019.4.13
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.3.1
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
+ua-parser==0.10.0
+urllib3==1.25.8
+user-agents==2.1
 whitenoise==5.0.1
