--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==2.9
 defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.4
+django-allauth==0.41.0
 django-filter==2.2.0
 django-tempus-dominus==5.1.2.13
 django-user-agents==0.4.0
