--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+asgiref==3.2.5
 dj-database-url==0.5.0
-Django==2.2.1
-gunicorn==19.9.0
-psycopg2-binary==2.7.7
-whitenoise==4.1.2
+Django==3.0.4
+django-allauth==0.41.0
+django-filter==2.2.0
+django-user-agents==0.4.0
+gunicorn==20.0.4
+numpy==1.18.2
+pandas==1.0.3
+psycopg2-binary==2.8.4
+python-dateutil==2.8.1
+pytz==2019.3
+six==1.14.0
+sqlparse==0.3.1
+user-agents==2.1
+whitenoise==5.0.1
